@@ -130,6 +130,13 @@ Changes since 2.1.3
     interpretation of '=' as whitespace on the command line.
 58. doc/tm/rtl/rline.tm: New file containing documentation for
     intrinsic functions dealing with the slang readline interface.
+59. slsh/lib/print.sl: If a string is passed as a file descriptor to
+    the print function, then regard the string as a filename.
+60. src/Makefile.in: Added _slang.h and sllimits.h as a global
+    dependency.
+61. slsh/lib/tm/print.tm: Documented the slsh print function.
+62. slsh/lib/print.sl: Rewrote and simplified the code that prints to
+    the various output "devices" by using a device-object.
 
 {{{ Previous Versions
 
